# python_projects

cosmic_python/: .flaskenv  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  model.py  orm.py  pyproject.toml  repository.py  requirements-dev.txt  requirements.txt  test_allocate.py  test_batches.py  test_orm.py  test_repository.py
cosmic_python/src/: orm.py  repository.py
cosmic_python/src/allocation/: model.py  orm.py  repository.py
cosmic_python/src/allocation/adapters/: orm.py  repository.py
cosmic_python/src/allocation/api/: flask_app.py
cosmic_python/src/allocation/config/: config.py
cosmic_python/src/allocation/domain/: model.py
cosmic_python/src/api/: flask_app.py
cosmic_python/src/config/: config.py
cosmic_python/tests/: conftest.py  test_allocate.py  test_batches.py  test_orm.py  test_repository.py
cosmic_python/tests/e2e/: test_api.py
cosmic_python/tests/integration/: test_orm.py  test_repository.py
cosmic_python/tests/unit/: test_allocate.py  test_batches.py
