[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "test"
description = "Allocation package"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.7"

[options]
package_dir="src"

[options.packages.find]
where="src"

[tool.setuptools]
packages = ["allocation", "api", "config"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]


