[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmic-python"
description = "Code along with the cosmic python book."
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.black]
line-length = 80
include = '''
(
    ^/tests/
  | ^/src/
  | ^/conftest[.]py
)
'''
exclude = '''
(
    __pycache__
  | \.pytest_cache
  | .*\.egg-info
)
'''

[tool.isort]
line_length=80
multi_line_output=3
skip = ["dev-venv", "venv"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
show_column_numbers = true
namespace_packages = true
